# warpgate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  warpgate.rc
cmake/: FindGTKMM.cmake
cnk_loader/: CMakeLists.txt
cnk_loader/include/: cnk0.h  cnk1.h  forgelight_chunk.h
cnk_loader/src/: cnk1.cpp  eco.cpp  forgelight_chunk.cpp  texture.cpp  tile.cpp
dme_loader/: CMakeLists.txt
dme_loader/include/: bone.h  bone_map.h  data_classes.h  dmat.h  dme.h  dme_loader.h  jenkins.h  material.h  mesh.h  parameter.h  ps2_bone_map.h  utils.h  vertexstream.h
dme_loader/src/: data_classes.cpp  dmat.cpp  dme.cpp  jenkins.cpp  material.cpp  mesh.cpp  parameter.cpp  ps2_bone_map.cpp  utils.cpp
doc/formats/: README.md  cnk0.hexpat  dmat.hexpat  dme.hexpat  gltf_animation.hexpat  mrn.hexpat  nmb.hexpat  semantic.hexpat  zone.hexpat
include/: sign.h  tsqueue.h  version.h  version.h.in
include/utils/: aabb.h  actor_sockets.h  adr.h  common.h  gltf.h  materials_3.h  morpheme_loader.h  sign.h  textures.h  tsqueue.h
include/utils/gltf/: chunk.h  common.h  dmat.h  dme.h
include/utils/gtk/: asset_type.hpp  bone.hpp  common.hpp  loaded_list_item.hpp  mesh.hpp  model.hpp  model_renderer.hpp  shader.hpp  skeleton.hpp  structs.hpp  texture.hpp  window.hpp
include/utils/hikogui/widgets/: model_widget.hpp
include/utils/vulkan/: camera.hpp  model.hpp  model_renderer.hpp
internal/: CMakeLists.txt
internal/cnk_loader/include/: cnk0.h  cnk1.h  eco.h  flora.h  forgelight_chunk.h  structs.h  texture.h  tile.h
internal/cnk_loader/src/: cnk0.cpp  cnk1.cpp  eco.cpp  flora.cpp  forgelight_chunk.cpp  texture.cpp
internal/dme_loader/: CMakeLists.txt
internal/dme_loader/include/: dme.h  dme_loader.h  parameter.h  ps2_bone_map.h
internal/dme_loader/src/: dme.cpp  parameter.cpp  ps2_bone_map.cpp  utils.cpp  vertexstream.cpp
internal/zone_loader/: CMakeLists.txt
internal/zone_loader/include/: eco.h  eco_layer.h  flora.h  flora_info.h  instance.h  light.h  runtime_object.h  structs.h  texture_info.h  zone.h
internal/zone_loader/src/: eco.cpp  eco_layer.cpp  flora.cpp  flora_info.cpp  instance.cpp  light.cpp  runtime_object.cpp  texture_info.cpp  zone.cpp
lib/: CMakeLists.txt
lib/gdk-pixbuf-2.0/2.10.0/: loaders.cache
lib/internal/: CMakeLists.txt
lib/internal/cnk_loader/include/: cnk0.h  cnk1.h  cnk_loader.h  eco.h  flora.h  forgelight_chunk.h  structs.h  texture.h  tile.h
lib/internal/cnk_loader/src/: cnk0.cpp  flora.cpp  forgelight_chunk.cpp  tile.cpp
lib/internal/dme_loader/: CMakeLists.txt
lib/internal/dme_loader/data/: materials.json
lib/internal/dme_loader/include/: bone.h  bone_map.h  dmat.h  dme.h  dme_loader.h  material.h  mesh.h  parameter.h  ps2_bone_map.h  semantics.h  utils.h  vertexstream.h
lib/internal/dme_loader/src/: dmat.cpp  dme.cpp  material.cpp  mesh.cpp  parameter.cpp  ps2_bone_map.cpp  semantics.cpp  utils.cpp
lib/internal/mrn_loader/: CMakeLists.txt
lib/internal/mrn_loader/data/: ThirdPersonX64_remap.json
lib/internal/mrn_loader/include/: file_data.h  mrn.h  mrn_loader.h  nsa_file.h  packet.h  packet_types.h  skeleton_data.h  string_table.h  structs.h  utils.h
lib/internal/mrn_loader/src/: file_data.cpp  mrn.cpp  nsa_file.cpp  packet.cpp  skeleton_data.cpp  string_table.cpp  utils.cpp
lib/internal/zone_loader/: CMakeLists.txt
lib/internal/zone_loader/include/: eco.h  eco_layer.h  flora.h  flora_info.h  instance.h  light.h  runtime_object.h  structs.h  texture_info.h  zone.h  zone_loader.h
lib/internal/zone_loader/src/: flora.cpp  instance.cpp  light.cpp
resources/: materials.json
script/: gen_shaders.py  jenkins.py  matgen.py  png2ico.py
src/: adr_converter.cpp  chunk_converter.cpp  decompress.cpp  dme_converter.cpp  export.cpp  gltf.cpp  hello_gtk.cpp  materials_3.cpp  mrn_converter.cpp  sign.cpp  test_adr.cpp  test_cnk.cpp  test_dme.cpp  test_mrn.cpp  test_zone.cpp  textures.cpp  tsqueue.cpp  warpgate.cpp  warpgate_gtk.cpp  zone_converter.cpp
src/utils/: aabb.cpp  actor_sockets.cpp  adr.cpp  common.cpp  gltf.cpp  materials_3.cpp  morpheme_loader.cpp  sign.cpp  textures.cpp  tsqueue.cpp
src/utils/gltf/: chunk.cpp  common.cpp
src/utils/gtk/: bone.cpp  common.cpp  loaded_list_item.cpp  mesh.cpp  model.cpp  model_renderer.cpp  shader.cpp  skeleton.cpp  texture.cpp  window.cpp
src/utils/hikogui/widgets/: model_widget.cpp
src/utils/vulkan/: model_renderer.cpp
src/utils/vulkan/shaders/: BeamParticle.frag  BeamParticle.vert  Billboard.vert  BumpRigid.vert  BumpRigidBlendInstanced.frag  BumpRigidBlendInstanced.vert  BumpRigidInstanced.frag  BumpRigidInstanced.vert  BumpUVInstanced.frag  BumpUVInstanced.vert  BumpUVRigid.vert  BumpUVSkin.vert  Character.frag  Character.vert  ClrNrmUV.vert  Color.vert  ColorUV.vert  DebugCharacter.vert  DebugText.vert  DebugVehicle.vert  Designer.frag  Designer.vert  DesignerInstanced.frag  DesignerInstanced.vert  Flora.vert  FloraModel.frag  FloraModel.vert  FloraModelInstanced.frag  FloraModelInstanced.vert  Foliage.vert  FoliageInstanced.frag  FoliageInstanced.vert  FontPrimitive.frag  FontPrimitive.vert  Glow.frag  Glow.vert  ModelRigid.frag  ModelRigid.vert  ModelSkinned.vert  NULL.frag  (+65 more)
